# ai_clean_names

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cli.py  run.py
src/ai_clean_names/: __init__.py  libs.py  main.py
