[project]
name = "ai-clean-names"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cdyeq12", email = "xawsolevo@gmail.com" }
]
dependencies = [
    "anthropic>=0.33.0",
    "icecream>=2.1.4",
    "pydantic-ai>=0.0.21",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "xlwings>=0.33.6",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.2",
    "basedpyright>=1.22.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_clean_names"]

[tool.pyright]
reportOptionalMemberAccess = false
reportArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
